tests/specs/ecosystem/babia_test/bdd/0_0_1.test
babia-test/bdd/0.0.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:187:11
    | 
187 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
188 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
189 |   return it({
    | ^^^^^^^^^^^^^
190 |     ...options,
    | ^^^^^^^^^^^^^^^
191 |     only: true,
    | ^^^^^^^^^^^^^^^
192 |   });
    | ^^^^^
193 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:195:13
    | 
195 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
196 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
197 |   return it({
    | ^^^^^^^^^^^^^
198 |     ...options,
    | ^^^^^^^^^^^^^^^
199 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
200 |   });
    | ^^^^^
201 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


